Separated Images By Label and ran PCA on each

--- a/Assignment3.ipynb
+++ b/Assignment3.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "from sklearn.decomposition import PCA"
    ]
   },
   {
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +74,7 @@
        "60000"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,27 +84,48 @@
     "for i in range(len(data_batch)):\n",
     "    labels=np.append(labels,data_batch[i][b'labels'])\n",
     "labels=np.reshape(labels,60000)\n",
+    "labels=np.array(labels,dtype=int)\n",
     "len(labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataByCat=[[],[],[],[],[],[],[],[],[],[]] \n",
+    "for ind,l in enumerate(labels):\n",
+    "    dataByCat[l].append(data[ind])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3072"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3072\n",
+      "3072\n",
+      "3072\n",
+      "3072\n",
+      "3072\n",
+      "3072\n",
+      "3072\n",
+      "3072\n",
+      "3072\n",
+      "3072\n"
+     ]
     }
    ],
    "source": [
-    "len(data[60000])"
+    "for cat in range(len(dataByCat)):\n",
+    "    pca=PCA(n_components=20)\n",
+    "    pca.fit(dataByCat[cat])\n",
+    "    print(len(pca.mean_))"
    ]
   }
  ],
