--- a/Assignment3.ipynb
+++ b/Assignment3.ipynb
@@ -2,15 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 166,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import numpy.linalg as la\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.pipeline import Pipeline\n",
     "from sklearn.decomposition import PCA\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import math"
    ]
   },
   {
@@ -136,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,77 +152,99 @@
     "    new_g=np.reshape(g,(32,32))\n",
     "    new_b=np.reshape(b,(32,32))\n",
     "    im=np.dstack((new_r,new_g,new_b))\n",
-    "    print(im.shape)\n",
-    "    plt.imshow(im)\n",
+    "    plt.imshow(im/255.0)\n",
     "    plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(32, 32, 3)\n"
-     ]
-    },
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP8AAAD8CAYAAAC4nHJkAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAH2lJREFUeJztnWuMnOd13/9nrjuzs8vd5S7J5cUidastO4lkM4JjFYZy\naaoYRmQXSWB/MITUiIIiBmog/SC4QO0CLeAUtQ1/aF3QtRClcG25sV0LgZvGEJyqrmJZlCxRkhlR\nFE2Jy8vuknvfnfucfpiRQa2e/7NLLjlL5fn/AGKH75nnfc/7zHvmnXn+c84xd4cQIj0y2+2AEGJ7\nUPALkSgKfiESRcEvRKIo+IVIFAW/EImi4BciURT8QiSKgl+IRMltZbCZ3QfgywCyAP6ru38+9vyR\nkRHfs2dP2JFslo7rwILb2x1+rHrE2GpFbO02tbFfQ7pHHIn8gDJ2zhY+ZQBAO+YjGZiJ7NAy/B7g\nnci5kdcFADJkn+3I3Ed2B4tNSGSS2Q9YOx0+h+3IOcde64zF7qWxX9KGbVezv+WFS6iursQm6xdc\ndfCbWRbAfwLwTwBMAXjazB5z95+xMXv27MHDXz0StI2MjNFj1TvhSZhr8HN8/dIatc3OrVLbxYUV\namu0m8HtrXqVjkG7RU1joyPUVsjxc5tfWKS2TjYf3F4sFumYgYEBaqtVa9SWBX/zKpcqwe2LC0t0\nDIzvr1AsUFsb4dcF4G+Uyyv8dV5d5ddHs8nnoxTx0WI3iE74Gomdc87Cwf/of/73/Djr2MrH/rsB\nnHT3U+7eAPBNAPdvYX9CiD6yleDfB+DMZf+f6m0TQrwN2Erwhz6XvuWziJk9aGZHzezowsLCFg4n\nhLiWbCX4pwAcuOz/+wGcW/8kdz/i7ofd/fDICP+OK4ToL1sJ/qcB3GZmh8ysAOBjAB67Nm4JIa43\nV73a7+4tM/sUgP+NrtT3sLu/FBtTGhjAu+94d9A2Mj5Ox82RBVa/xFdeL2aXqc2rM9Q2mOGqQyUb\nXoE3b9Ax5QG+Ylsu8RX4fJa/L4+3uWxUa4V9zOX4/tpktRkA6vU6tZUHBqktlwmftw9comMi6hvy\nEbWi2uLXQYWsmI9l+aW/tsZX+73DlQUnahAAICIflgfCCk0uH94OAO1W+HUpDJS5D+v3v+lnBnD3\n7wP4/lb2IYTYHvQLPyESRcEvRKIo+IVIFAW/EImi4BciUba02n+ldByotsIy1QJXlPDzi2Ep5/Q0\nT3CZmZ2jtmpMyon0MSgVwwkwA3kuQ1lkf41qJCEokthjGX68xblwQlMuz/fXaHI/IomHaDf4i1Ys\nhOcqn+PzsRbZX2uV+1iLjMt5WI7sRDLmcpEMvIjKipVVnkxWGeQSXD4XlvQ6kWMNDe8Ibs/EXrD1\nz930M4UQ/6BQ8AuRKAp+IRJFwS9Eoij4hUiUvq72Oww1Dx9yeZknl5w4OxvcfqnKM0GaGV6aqjLG\nk22yGZ6AUSqHfe/wvB4sRcqCtSKr1CM7hvg4PlWYWw6vOA8N8yScQiRBp0SSTgDAIqviK6QUVr5Q\nomM6WX5izUiCUZaULgOAFlmeLxb5mEaTv6CdDA+ZYmWU2kCSwgCgTi7jXKS24o7BsOKTzWyqfB8A\n3fmFSBYFvxCJouAXIlEU/EIkioJfiERR8AuRKH2V+lrumK+H5ZxqRMpZJEkds0u8Zlo2wxMcYqkP\n7VakkBypw1bMRKSmiC7XiiSXZItcErNIK7Jdu8IVkrN5ftZDZZ50Us5yWXSlGum+Uwwfrx2533Sc\ny1TteqRTziCXddeaYR9bkfZfA5G6i6U8D5lMpN/YSIX7OFIOXz8VIi0DwEA+fA0UIrUa16M7vxCJ\nouAXIlEU/EIkioJfiERR8AuRKAp+IRJlS1KfmZ0GsAygDaDl7odjz2+1O5hdCEs2y00usdVqYVun\nzaWVaqQ+Xj7HZa9MJFOt25LwrRQi9fayBS4DZiySMReR2KzFs86GCuEMvWyWz2850hosF7ENDXL/\n942F/Wh2+P6WKnzu83t4O7fSDi5Vvn7xZHD7zMwUHePL4fp4AFAc3UltlQrPjtwxxKW+8R1hWffg\nAe5Hth2WkIuR620910Ln/3V3v3gN9iOE6CP62C9Eomw1+B3A35jZM2b24LVwSAjRH7b6sf8edz9n\nZrsA/MDM/t7dn7j8Cb03hQcBYNfkvi0eTghxrdjSnd/dz/X+zgD4LoC7A8854u6H3f3wjtGxrRxO\nCHENuergN7NBMxt64zGA3wbw4rVyTAhxfdnKx/7dAL5r3eyoHID/7u5/HRvQbHZwbjZc2HGpwV1Z\nWQtLWx6RyhDJsPJINl2xxGWjDpEBLy3ztmGrqzwbbXgHl68Wl3jG3FCkqOZN+8L7rBS51NeI3ALO\nrkWyEps88/DgznB2YdEiRVcjWX2LS8vU9uTPjlLb8GRY1rVy5FgXebZosczno1Lh2Zb1Jt/nmQvh\nc5uZOUHH7B4+Fz5OPVJNdh1XHfzufgrAr1zteCHE9iKpT4hEUfALkSgKfiESRcEvRKIo+IVIlP4W\n8Ox0MLcczrZrFcLSEADUm2F5Za0e7ksHAMUSl8PykX5rCwvz1Gak6GMhyyWefD5SXHKF9/HbOxHu\nxQYAt9zEs70mhsLnFqkFidciPQ//5/99jtqmznP/f+99Nwe3/9qte+iYXIZnMrY6XJobGpmgtnIl\nPI/Ly1x6Q5ZnF9ZqfFyDZJ8CwJrzcbls+MV5/UxYzgOA5bFwL8d6I1KAdh268wuRKAp+IRJFwS9E\noij4hUgUBb8QidLf1f5WGzNzl4K20hhfFe94eLW/QtocAUCpwE+t5ZF6dpG2VmxNv5Tnq9QL8zxB\np5DlK9g3799LbWPD3EdW368dafG1VOP7m2mFV5UBoDbGFYlXli4Et0/OcT92j+yitmKZz/Fdt99O\nbR3Sviq/Gmk1tjjNbR2e2LO4yNWn5UykPRipu2eFYTrmNEmQq7f4/K5Hd34hEkXBL0SiKPiFSBQF\nvxCJouAXIlEU/EIkSp+lvibmL84GbfMrvL1WpxNOihgZHqVj8oMVvr9srF0Xfz80kmC0ssLr9OXB\nbe+6mUtUg0Xe+qlWq3NbI+xjdZXLUPNtfhm879bd1JYrcNmruBiW+mbn+Xw4uPyWz3EpuFzgtQQH\nSa2+Qo6fs0ek20g3NzQ7kVZvnUjtwlZ4HnNFLqUak4m5ovgWdOcXIlEU/EIkioJfiERR8AuRKAp+\nIRJFwS9Eomwo9ZnZwwA+DGDG3d/T2zYG4FEABwGcBvAH7s6L3/0CB4hs55F2Rox6pJ7aGsJZTwDQ\novl5QKcTqcdH3ivrVd6ua3wPz4orj3Op8tQcl8SKXPVCjUh6L796lo7pRHaYa/M5Ho5Ira12uM7g\ncoO/LpfmX6W2V195ndoOveNXqe2dt4c7QzdaERnNuEycy3F5s0MyKgGg2eDzmMmEr6tMRFd033z2\nHj3uJp7z5wDuW7ftIQCPu/ttAB7v/V8I8TZiw+B39ycAzK3bfD+AR3qPHwHwkWvslxDiOnO13/l3\nu/t5AOj95VUYhBA3JNd9wc/MHjSzo2Z2tLbK2ywLIfrL1Qb/tJlNAkDv7wx7orsfcffD7n54YJAv\nfgkh+svVBv9jAB7oPX4AwPeujTtCiH6xGanvGwDuBTBuZlMAPgvg8wC+ZWafBPA6gN/fzMEyZigN\nhIsVep5nZjE3Bwd5gcNCnkshuQ6X0Spl/ulkmNjOnuHyj+X4/l67yKWcV89xaag8wMedPfF8cHvD\nuJw3uoMXQq0uhAuuAgB28ky1MxfOB7ePDPJsxVN//wq1Lc3zrMSl+ePUNjoRnv/RHbzlWTMiR3aM\nZ1TmM5Fs0chtNpsPX9+RJEHaOu5K2DD43f3jxPSbWz66EGLb0C/8hEgUBb8QiaLgFyJRFPxCJIqC\nX4hE6WsBT4Mh62E5xLLcFSZrVGu86OfKMpeG9k5wWfHQ/glqazXDfjR28756A7v5/l6Z4XLe43/L\nZa9b9o1R2/LZcIHUi5fCBTUBYNcEL9K5sBCRvTLc/wYpWLlrIpxlBwCt2gi1TYxMUtu+SZ6F12yG\nr4OFJX7fK5W4jGaRXnge0eYyERmw4+FxHskwjbR53DS68wuRKAp+IRJFwS9Eoij4hUgUBb8QiaLg\nFyJR+turr93GwsJK2JEWd6VSCWekWZ7LJzuGeNbWTe/g0lalwmWjai0svUwe4tmF0zVe1PHs2deo\nbeHcz6mtORR5zyZFTaee/wkfsofLb9Uclyqz4JmCg4Nh2/m1sBQJAIUsPy9fDV83ADC1eo7alhfC\nEufQzj10zK7dO6kt71zeHCjwoqDocG1utR7OMi2UIhImKQjqRDYMoTu/EImi4BciURT8QiSKgl+I\nRFHwC5EofV3tz2ZzGBoJr6S2CrzWXZO1JuIl5NBqc2O5wpWA+WWeyLKwGl6VLY3y1f6Zc7wG3tlj\n/4fa3rO/QG2338ptT55f31+ly8gIHzP9arjuHwB0UKa2QpErAQsWvq8M7+Ir6dUCryV4fi58XgAw\nkuV19ZrHwl3kSpFEoXs+9LvUtv8AP+d2pCUXIq23WB5RPtZWLh+eq8wV1PbTnV+IRFHwC5EoCn4h\nEkXBL0SiKPiFSBQFvxCJspl2XQ8D+DCAGXd/T2/b5wD8EYA3sjQ+4+7f32hfDqBNFI9sJInBiEzS\nibifdS71jXJFCcPDkfptxbBcdn6Ry4NP//CH1Db18o+p7Z/94T+ntguRJJd2IVyfcN/Nt/D9nfoZ\ntdUunaS2VePybHks3LW9mglLbwBQKHFZcXyI2xZmeRLUpQung9tLlSU6psNNyDZ4MlOshl8+z6VW\nz4UT1Nx44louF24RdyVdvDZz5/9zAPcFtn/J3e/s/dsw8IUQNxYbBr+7PwGA/8JCCPG2ZCvf+T9l\nZsfM7GEzG71mHgkh+sLVBv9XANwC4E4A5wF8gT3RzB40s6NmdrS6GvkyJYToK1cV/O4+7e5td+8A\n+CqAuyPPPeLuh939cGmQ/wZeCNFfrir4zezyrIiPAnjx2rgjhOgXm5H6vgHgXgDjZjYF4LMA7jWz\nO9FV704D+OPNHtCJFJElWUoAb1sU6ZwEK0X2F3nLm7vE23xdWAtP17NHT9Axx5/kct7oLi5v1nM8\n8/DU1BS1ZcjJXZjhtfNyA/wyKEeyAQs5Pi5fCktRWXCZ8pZ9+6ntl95zmNqe/DH38dKFcFbl8FBY\nigQA0uELAHDxNJd1M7H2WoWIbEck5B0TvH1ZcSjsZCYiD77luBs9wd0/Htj8tU0fQQhxQ6Jf+AmR\nKAp+IRJFwS9Eoij4hUgUBb8QidLXAp5mhgzJYCoV+ftQg2SxtVq8YGK7w+Wfkxd4ZlmtyuWa06+d\nCW5//kc8c+/8y8eo7c5f+0Nqe/0M9/HCSy9QW2P21eD21toiHVMe4JJjaZhn7u3ee4DaRneHZbts\nnmfnVZfDBVIB4OJF/lof2HsXtU2fPxvcnitHskhLvO2WD/JfsmctnFEJAMY0bgDVevjcGhf4OQ/X\nwxmE7bDCGkR3fiESRcEvRKIo+IVIFAW/EImi4BciURT8QiRKX6U+d0eTaBGjkQKN2YGwrFFdq9Ix\n7Q6XVmYimXsHJnkm1avP/nVw+9QL4e1duGSXHxqktsVlLs3NnniO2gZb4Ypr777rV+mYYon7MTzM\n52N83zuorZ0NS621Gteizv48LMsBwLETvJBors0z7ZrthfD2Bs/6bA3wIp3lm/ZRG5OxASAXyUCt\nkL6Sa5f4eU2THpCtRqSB5Tp05xciURT8QiSKgl+IRFHwC5EoCn4hEqW/iT2ZDIql8ErqWp2vAnst\nvILZ7HD3Lctt1RW+IvrYo49R25P/6/Hg9qWL03TM7pvfRW3tiP8jQ7yG38TBf0Rte4fCK873fuQj\ndMxKlSeQDBR5AsyFaa5ILC2HV6oP7efJQIXIfMydO01tJ154htqQrQc3j43weoFloi4BwGiJ++jG\nr+GBEr/PVkiPLatw1eF4WMRA5gpu57rzC5EoCn4hEkXBL0SiKPiFSBQFvxCJouAXIlE2067rAIC/\nALAHQAfAEXf/spmNAXgUwEF0W3b9gbvzLJbu3pAxUlsvw5MiPBd+j8pZpCVXpGZarc67BT/3DJeN\n6s2wJHbHnbyG3OjeW6itWORSztDoGLUduPUOaqtYONmpmeXHWmlx6XOpxpNLZue51De5e09wey7S\nlq08xGXFA4d4EhHwbmqpVMI1CGstfn3k6jPUtjPHr51qldcgXFvmSWjVVliOHCrzxra5TDh0Dfy8\n1rOZO38LwJ+6+7sAvB/An5jZHQAeAvC4u98G4PHe/4UQbxM2DH53P+/uz/YeLwM4DmAfgPsBPNJ7\n2iMA+K9IhBA3HFf0nd/MDgK4C8BTAHa7+3mg+wYBgLc9FULccGw6+M2sAuDbAD7t7vyLz1vHPWhm\nR83saHWFf0cUQvSXTQW/meXRDfyvu/t3epunzWyyZ58EEFwlcfcj7n7Y3Q+XKvz36kKI/rJh8JuZ\nAfgagOPu/sXLTI8BeKD3+AEA37v27gkhrhebyeq7B8AnALxgZm8Uj/sMgM8D+JaZfRLA6wB+f3OH\nDL/fZHK8vVarGa65l43UTCtETm16kSuS//R3P0xtc9NhSWnmfLiNFwAUyvzTTrMZlngAYGWVf7Nq\ndbg0t0rkyAsz4ZpvAFAa4i2oqm3u486JcWrLF8KvzXKNS16FCpf6brvrMLVNvvN2aivmSAutJp/D\nbGx+p7j0iVV+DXfqXGqtEdluHnyujr/08+D2aq1Bx6xnw+B39x8BVDz8zU0fSQhxQ6Ff+AmRKAp+\nIRJFwS9Eoij4hUgUBb8QidLfAp4GZDLh4oiNSGZZrUXeozq80KJFWjhlCjyzbHw8nI0GAJWJsK2a\n59lXGfDzmpvn8tvCuVlqy2WL1LZvb9jHWLZXp8MLTxZy/BJpOy/8uVoLy7MkQbO7v5gxkqWZLXA5\ntUOut+EylzcLdSIPAlg+x+d+sMpbmw1luAw4MBju5XVp6RQdc5FIt60mfy3Xozu/EImi4BciURT8\nQiSKgl+IRFHwC5EoCn4hEqWvUp+7o+PhLLFanWcwGXFztRqWkwBgdfkitZXzPMPq0jLPimoRPwo7\ndtMxmQ7fX7nJ33unp8NZWwCQKXDZ6OVjU8HtH/h1noNVsDK1NZ3LqaUKH7e0HM5KbLS4FNX2SD+7\nAf6aHZrkst3ISPg1K/ogHTN7Iiy9AcDZhUhWovHXenScz1VjICyZrp6NZGKWw1mT6tUnhNgQBb8Q\niaLgFyJRFPxCJIqCX4hE6e9qPxyNVngltVzkCRNt0jIqE6kvV87z5Ix2kyeJ1Bt8NbfZDPvRWOMl\nyReXeILRngmuEpTPhlftAWDmzElq27crXFfvpaf/Hx1TmdhLbTffzlthDVZ4IkurHZ7/xUVem9Aj\n96LJfdzHd9wUSeyph+d/aZorRbNzER8jqoOP8dd6fpSrHGdn5oLbpxb4NXDrHeEErmN/x5PW1qM7\nvxCJouAXIlEU/EIkioJfiERR8AuRKAp+IRJlQ6nPzA4A+AsAewB0ABxx9y+b2ecA/BGAN4rNfcbd\nvx/bV6sJTM+Gpb78zp10XCkbfo8a5LkZsA5v5dWKJJcsLfFkigZphVUa5DX8qrGaagVuO/yBD1Db\nqZe5RLh/f1gC6kTqHa7VeS2+dkROrVa5tDVYCUt9pRKXYHORlm0rVe7Hkz89QW01kmCUa/NLP5vn\nSTilA1zq6wzVqG1mbZnafnripfCYhWk65n2Th4Lbc/nNq/ebeWYLwJ+6+7NmNgTgGTP7Qc/2JXf/\nj5s+mhDihmEzvfrOAzjfe7xsZscB7Lvejgkhri9X9J3fzA4CuAvAU71NnzKzY2b2sJnxpGohxA3H\npoPfzCoAvg3g0+6+BOArAG4BcCe6nwy+QMY9aGZHzexoPfIzWCFEf9lU8JtZHt3A/7q7fwcA3H3a\n3dvu3gHwVQB3h8a6+xF3P+zuh4uRXvVCiP6yYfCbmQH4GoDj7v7Fy7ZPXva0jwJ48dq7J4S4Xmxm\ntf8eAJ8A8IKZPdfb9hkAHzezOwE4gNMA/nijHdWbjtfPhOucLTqXSW49EJZedk/w7LxClktDKytc\nYhuMfDrJZirB7W3wmm9jE1zCHKrw6R/Icz/axm3LK/PB7bv3jNEx+we5fJUxLhFOz3JZ1DPh7LLR\nEb40VF/lr9nCIpfKGm0+/8UCkXxbXN4cLPL9FSqRFmUZPu7kmQvUdu5CeB4P7OeS7s6JcEzkYi3P\n1j93oye4+4+AYKO3qKYvhLix0S/8hEgUBb8QiaLgFyJRFPxCJIqCX4hE6WsBz07LsTRPMuOIdAEA\n8zPtsGGVF2Ec380Lgg5E2l21Grx4IxuWyfMMwnyW+7GjxGWv1UgW20CZS3OlgXABz0LEx2zEZkbm\nHkBlONKuaylcCHVpif/Ks1Ti+xvfyedqZYVnF3onLL95jsvEjRYv4lrnijQaDT5Xp0+eprZSOezL\nBz94Bx3zy7fvCu9rYPMhrTu/EImi4BciURT8QiSKgl+IRFHwC5EoCn4hEqW/vfo6jlYtnFFXWwpn\n+wHA3EpYrmmVuIzWrPL3teFI3zRkeWZWtTYTHtLkx8oWeT+7xhr3o9ni89Fuc4mzaGFfCnkub1ok\nc8+5IgYrcMkxS0zNSDYdGlzeHBnlUl+pwPvTLS6EpdsWkQABoBOZ+3IkZHaPD1HbaCSDc2gwnKX5\nW/e+kx+LqKIDV1DAU3d+IRJFwS9Eoij4hUgUBb8QiaLgFyJRFPxCJEpfpb5M1lFhBRDbK3TcympY\nN2pWuQ61Gkm/Wlzk73mVYd5LrjIcLqhYKUey+ga4bbnBC2DWSF9AAMgVucTZaoUlrAZXttCs82y0\nbmX2MGuRQqgdYspl+SXXqEZ6KC5weXNsjEtsQ0T6XJrjc1+O9Ay87SAvyPrOXzpAbdNzPFt0eoqc\nW4dfpxdJQdNWm7+W69GdX4hEUfALkSgKfiESRcEvRKIo+IVIlA1X+81sAMATAIq95/+lu3/WzA4B\n+CaAMQDPAviEu/OMCHRr4O2/KWwrjvDV+eXZsJu1aiShg4sHmJvjq8qVQV5HbmQkbBvdyU97lC8O\no53hK7MZ40pGNssVBGTCtshiP7zDE3vaLT5XpUgSlJErq0naeAFArsxbimUj9f2ykWShkUp4HOvi\nBQBjEcXn4K38BR3ZOUhthcG/o7YLi+FWXsdfO0vHMBcb13i1vw7gN9z9V9Btx32fmb0fwJ8B+JK7\n3wZgHsAnN31UIcS2s2Hwe5c37qP53j8H8BsA/rK3/REAH7kuHgohrgub+s5vZtleh94ZAD8A8CqA\nBXd/4zPhFIB918dFIcT1YFPB7+5td78TwH4AdwN4V+hpobFm9qCZHTWzo40qb7MshOgvV7Ta7+4L\nAP4WwPsBjJj9YllnP4BzZMwRdz/s7ocLJf4zTCFEf9kw+M1swsxGeo9LAH4LwHEAPwTwe72nPQDg\ne9fLSSHEtWcziT2TAB4xsyy6bxbfcve/MrOfAfimmf07AD8F8LUN9+QtZJsXg6Z84ygdVsyEE1k6\nuXBrKgCoLXL5amGWy4rzHT4lc+Xwe+XIGG/vNDLOpZfSIJfRsrmIampcYsvkwj4OlHi9vUYjUi+w\nxf0fGuD3jlKFJGMZT5pZ7vCvhZnOMLXl83we66thybTW5PUCFxrcx1NYoLYXnudy3svHnqe20ydP\nBrf/5Mdc3ty/txLcXq3x81rPhsHv7scA3BXYfgrd7/9CiLch+oWfEImi4BciURT8QiSKgl+IRFHw\nC5Eo5s4lsWt+MLNZAK/1/jsOIKz79Rf58Wbkx5t5u/lxk7tPbGaHfQ3+Nx3Y7Ki7H96Wg8sP+SE/\n9LFfiFRR8AuRKNsZ/Ee28diXIz/ejPx4M/9g/di27/xCiO1FH/uFSJRtCX4zu8/MXjazk2b20Hb4\n0PPjtJm9YGbPmRlPK7z2x33YzGbM7MXLto2Z2Q/M7JXe39Ft8uNzZna2NyfPmdmH+uDHATP7oZkd\nN7OXzOxf9rb3dU4ifvR1TsxswMx+YmbP9/z4t73th8zsqd58PGoWSZHcDO7e138AsuiWAbsZQAHA\n8wDu6LcfPV9OAxjfhuN+EMB7Abx42bb/AOCh3uOHAPzZNvnxOQD/qs/zMQngvb3HQwBOALij33MS\n8aOvcwLAAFR6j/MAnkK3gM63AHyst/2/APgXWznOdtz57wZw0t1PebfU9zcB3L8Nfmwb7v4EgLl1\nm+9HtxAq0KeCqMSPvuPu59392d7jZXSLxexDn+ck4kdf8S7XvWjudgT/PgBnLvv/dhb/dAB/Y2bP\nmNmD2+TDG+x29/NA9yIEsGsbffmUmR3rfS247l8/LsfMDqJbP+IpbOOcrPMD6POc9KNo7nYEf6i0\nynZJDve4+3sB/A6APzGzD26THzcSXwFwC7o9Gs4D+EK/DmxmFQDfBvBpd+c9rfvvR9/nxLdQNHez\nbEfwTwG4vJE5Lf55vXH3c72/MwC+i+2tTDRtZpMA0Ps7sx1OuPt078LrAPgq+jQnZpZHN+C+7u7f\n6W3u+5yE/NiuOekd+4qL5m6W7Qj+pwHc1lu5LAD4GIDH+u2EmQ2a2dAbjwH8NoAX46OuK4+hWwgV\n2MaCqG8EW4+Pog9zYmaGbg3I4+7+xctMfZ0T5ke/56RvRXP7tYK5bjXzQ+iupL4K4F9vkw83o6s0\nPA/gpX76AeAb6H58bKL7SeiTAHYCeBzAK72/Y9vkx38D8AKAY+gG32Qf/PjH6H6EPQbgud6/D/V7\nTiJ+9HVOAPwyukVxj6H7RvNvLrtmfwLgJID/AaC4lePoF35CJIp+4SdEoij4hUgUBb8QiaLgFyJR\nFPxCJIqCX4hEUfALkSgKfiES5f8DSTFRK4az99kAAAAASUVORK5CYII=\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x1a09da2518>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "printImage(data[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
     "mean_images=[]\n",
     "mean_var_ratio=[]\n",
-    "tr_data=[[],[],[],[],[],[],[],[],[],[]] \n",
+    "pca_models=[]\n",
+    "tr_data=[] \n",
+    "app20data=[] \n",
     "for cat in range(len(dataByCat)):\n",
     "    pca=PCA(n_components=20)\n",
     "    pca.fit(dataByCat[cat])\n",
-    "    tr_data[cat]=np.append(tr_data[cat],pca.transform(dataByCat[cat]))\n",
+    "    td=pca.transform(dataByCat[cat])\n",
+    "    tr_data.append(td)\n",
+    "    pca_models.append(pca)\n",
     "    mean_images.append(pca.mean_)\n",
-    "    mean_var_ratio.append(pca.explained_variance_ratio_)"
+    "    mean_var_ratio.append(pca.explained_variance_ratio_)\n",
+    "    app20data.append(pca.inverse_transform(td))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "err=[]\n",
+    "for cat in range(len(dataByCat)):\n",
+    "    error=0\n",
+    "    for r in range(len(dataByCat[cat])):\n",
+    "        error+=la.norm(app20data[cat][r]-dataByCat[cat][r])**2\n",
+    "    err.append(error/len(dataByCat[cat]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.3497066 ,  0.12391284,  0.06152857,  0.05332772,  0.03035142,\n",
-       "        0.02177949,  0.02134457,  0.01832662,  0.0133255 ,  0.01103754,\n",
-       "        0.01082082,  0.01038155,  0.00928397,  0.0086913 ,  0.0078526 ,\n",
-       "        0.0072347 ,  0.00679935,  0.00608438,  0.00589063,  0.0053538 ])"
+       "[1549.8880035681184,\n",
+       " 1956.7221827825651,\n",
+       " 1501.9188420257835,\n",
+       " 1716.8868343909392,\n",
+       " 1421.1510810849618,\n",
+       " 1749.4237961769386,\n",
+       " 1577.911162330716,\n",
+       " 1816.1406166440559,\n",
+       " 1502.7035120073087,\n",
+       " 1971.6022619592284]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "mean_var_ratio[0]"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
