--- a/Assignment3.ipynb
+++ b/Assignment3.ipynb
@@ -180,6 +180,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 26.53235151,  15.79363089,  11.12915619,  10.36096793,\n",
+       "         7.81651824,   6.62136771,   6.55492255,   6.07386258,\n",
+       "         5.1792353 ,   4.71367939,   4.66717425,   4.57146043,\n",
+       "         4.3230536 ,   4.18279235,   3.97587352,   3.81624486,\n",
+       "         3.69972792,   3.49972406,   3.44358987,   3.28348569])"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pca_models[0].singular_values_/6000"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 170,
    "metadata": {},
    "outputs": [],
